{
    "name": "Controls",
    "maps": [
        {
            "name": "Default",
            "id": "8892db01-883f-43a1-aa3b-d53608546d87",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "9db7c69a-6137-419b-b8a3-d16b4dfbbea1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cfbd88a2-188c-417a-ac32-1fd69f48103c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90c48a9f-a687-419a-894a-f37af1b4bfa4",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "NextTurn",
            "id": "2dbe82be-2ebb-408f-8253-ce748b7b8b2a",
            "actions": [
                {
                    "name": "SkipTurn",
                    "type": "Button",
                    "id": "4c4125d9-b662-4385-91e5-9c9e7d901772",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "287584c8-e294-4e36-bc1e-76aa29720b0d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2d4c015-c558-4aff-9a81-f8e21de4dbec",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Init",
            "id": "b34ed7bb-e459-4f59-8008-4bd7b31562c3",
            "actions": [
                {
                    "name": "PlaceCharacter",
                    "type": "Button",
                    "id": "a8ccfe16-5a08-481e-80c0-1175b08ba8ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e7442e76-2ef4-4679-a683-603b9020a0fe",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "329aa2c9-a92a-411c-9629-a6ec0dfeb9fe",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": []
        }
    ]
}